# Project-Editor

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .pylintrc  Bugs.rtf  Dockerfile  Doxyfile  Makefile  Project-Editor.spec  README.md  finSort.txt  pdm.toml  pyproject.toml  pysidedeploy.spec  requirements.txt  setup.py  update_version.py
.github/workflows/: build-project.yml  build.yml  build_docs.yml  create-release.yml  deploy-as-package.yml  docker-build.yml  main.yml  test.yml  update-version-pr.yml
build_files/: __init__.py  build_control.py  build_deb.py  build_desktop.py  debrules.mk  extract_metadata.py  missiondmx.xml
configs/: logging.json
dev/: server.py
src/: DMXGui.py  DMXModel.py  Globals.py  Network.py  ShowFile.py  Style.py  gl_init.py  main.py  network.py  signal_logging.py  style.py  utility.py  varint.py  x_touch.py  xml.py
src/cli/: bankset_command.py  cli_context.py  command.py  help_command.py  list_command.py  remote_control_port.py  select_command.py
src/configs/: logging.json
src/controller/: network.py
src/controller/autotrack/: LightController.py
src/controller/cli/: asset_command.py  bankset_command.py  cli_context.py  command.py  connect_command.py  event_command.py  extract_command.py  fish_con_command.py  help_command.py  joystick_enum.py  joystick_handling.py  list_command.py  macro_command.py  remote_control_port.py  select_command.py  show_command.py  uipage_command.py  utility_commands.py
src/controller/file/: read.py  recently_used.py  showfile_dialogs.py  transmitting_to_fish.py  write.py
src/controller/joystick/: joystick_enum.py  joystick_handling.py
src/controller/ofl/: fixture.py  manufacture.py
src/controller/utils/: graph_sorting.py  json_formatter.py  process_notifications.py  yaml.py
src/editor/show_browser/: show_browser_view.py
src/file/: __init__.py  read.py  showfile_dialogs.py  transmitting_to_fish.py  write.py
src/fish/: cue_state.py
src/layouts/: flow_layout.py
src/model/: __init__.py  board_configuration.py  broadcaster.py  channel.py  color_hsi.py  control_desk.py  curve_configuration.py  device.py  events.py  filter.py  final_globals.py  macro.py  patching_channel.py  patching_universe.py  scene.py  stage.py  ui_configuration.py  universe.py
src/model/dmx/: dmx_test.py  dmx_visualizer.py
src/model/file_support/: cue_state.py
src/model/filter_data/: __init__.py  chaser_model.py  transfer_function.py  utility.py
src/model/media_assets/: __init__.py  asset.py  asset_loading_factory.py  factory_hint.py  image.py  media_type.py  registry.py
src/model/ofl/: color_name_dict.py  fixture.py  fixture_library_loader.py  fixture_not_found_exception.py  manufacture.py  ofl_fixture.py
src/model/patching/: fixture_channel.py
src/model/virtual_filters/: __init__.py  auto_tracker_filter.py  color_mixer_vfilter.py  color_to_colorwheel.py  colordirector_vfilter.py  cue_vfilter.py  effectstacks.py  fader_vfilter.py  import_vfilter.py  pan_tilt_constant.py  range_adapters.py  sequencer_vfilter.py  vfilter_factory.py
src/ofl/: fixture.py  manufacture.py  patching_dialog.py
src/patch/: patch_controller.py
src/patch/patch_plan/: auto_resize_view.py  channel_item_generator.py  fixture_item_view.py  patch_base_item.py  patch_plan_selector_view.py  patch_plan_widget.py  used_fixture_view.py
src/proto/: Console_pb2.py  Console_pb2.pyi  DirectMode_pb2.py  DirectMode_pb2.pyi  Events_pb2.py  Events_pb2.pyi  FilterMode_pb2.py  FilterMode_pb2.pyi  MessageTypes_pb2.py  MessageTypes_pb2.pyi  RealTimeControl_pb2.py  RealTimeControl_pb2.pyi  UniverseControl_pb2.py  UniverseControl_pb2.pyi
src/resources/: 3dmodels  ShowFileSchema.xsd  autotrack_models  chaser_layer_help  contributors.html  fonts  icons
src/resources/autotrack_models/: yolov8l.onnx  yolov8m.onnx  yolov8n.onnx  yolov8s.onnx  yolov8x.onnx
src/resources/data/: color-to-colorwheel-template.lua.j2  color_mixing.yml  colornames.csv  stage.yaml
src/view/: main_widget.py  main_window.py
src/view/action_setup_view/: _audio_setup_widget.py  _cli_syntax_highlighter.py  _command_insertion_dialog.py  chaser_preset_selection_dialog.py  combined_action_setup_widget.py  constant_update_dialog.py  cue_switch_dialog.py  event_setup_widget.py  macro_setup_widget.py  new_trigger_dialog.py  scene_switch_insertion_dialog.py  sequence_trigger_insertion_dialog.py
src/view/console_mode/: console_channel_widget.py  console_fader_bank_selector.py  console_scene_selector.py  console_universe_selector.py  console_universe_widget.py
src/view/dialogs/: __init__.py  asset_mgmt_dialog.py  asset_selection_dialog.py  colum_dialog.py  exception_dialog.py  fish_exception_dialog.py  fixture_dialog.py  fixture_modifier_dialog.py  patching_dialog.py  selection_dialog.py  temperature_dialog.py  universe_dialog.py
src/view/direct_mode/: direct_channel_widget.py  direct_scene_selector.py  direct_universe_widget.py  universe_selector.py
src/view/filter_mode/: Filters.py  NodeEditor.py  NodeGraphicsItems.py  NodeWidgets.py  Nodes.py  SceneTabWidget.py  node_editor.py  node_graphics_item.py  nodes.py  nodes_t.py  scene_tab.py
src/view/logging_mode/: dmx_data_log.py  logging_item_widget.py  logging_widget.py  search.py
src/view/logging_view/: dmx_data_log.py  logging_item_widget.py  logging_widget.py  search.py
src/view/misc/: about_window.py  console_dock_widget.py
src/view/patch_mode/: patch_mode.py
src/view/patch_view/: patch_mode.py
src/view/patching/: patch_item.py  patch_plan_widget.py  patching_selector.py
src/view/patching_mode/: patch_plan_widget.py  patching_selector.py
src/view/show_mode/: __init__.py  _scene_selector_widget.py  library.py  node_editor.py  node_graphics_item.py  (+5 more)
src/widgets/: universe_selector.py
test/: ShowFile.xml  manual_test_box_render_widgets.py  manual_test_color_picker.py  manual_test_filter_config_widgets.py  qtbug.py  test_DMXGui.py  test_DMXModel.py
test/unittests/: __init__.py  config.sample.py  fixture_inst_test.py  test_dimmer_brightness_mixin_vfilter.py  test_universe.py  utilities.py
(+352 files in other folders)
