[project]
name = "Project-Editor"
version = "1.1.0"
description = "Editor for realtime dmx control software FISH https://github.com/Mission-DMX/realtime-fish"
authors = [
    { name = "CorsCodini", email = "cors.codini@web.de" },
    { name = "Niklas Naumann", email = "niklas.naumann@student.uni-luebeck.de" },
    { name = "Doralitze", email = "doralitze@chaotikum.org" },
]

requires-python = "==3.13.*"
readme = "README.md"
license = { text = "GPL-3" }

dependencies = [
    "PySide6>=6.9.0",
    "pyqtgraph>=0.13.7",
    "xmlschema>=3.4.5",
    "requests>=2.32.3",
    "numpy>=2.2.4",
    "ruamel-yaml>=0.18.10",
    "html2text>=2024.2.26",
    "markdown>=3.7",
    "typing-extensions>=4.13.1",
    "tomlkit>=0.13.2",
    # Dependencies for automatic tracking
    "opencv-python>=4.11.0.86",
    "qimage2ndarray>=1.10.0",
    "aiortc>=1.11.0",
    "qasync>=0.27.1",
    "pyjoystick>=1.2.4",
    "pyopengl>=3.1.9",
    "onnxruntime-openvino>=1.21.0",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "pylint>=3.3.6",
    "pylint-protobuf>=0.22.0",
    "pyinstaller>=6.12.0",
    "mypy>=1.15.0",
    "types-protobuf>=6.30.2.20250506",
    "types-requests>=2.32.0.20250328",
    "types-Markdown>=3.8.0.20250415",
    "ruff>=0.12.0",
]

[tool.missionDMX]
display-name = "Mission DMX"
organization = { name = "missionDMX", domain = "technikradio.org" }

[tool.pdm]
distribution = false

[tool.ruff]
line-length=120

[tool.isort]
profile = "black"
line_length = 120
skip = ["src/proto/", ".venv"]
multi_line_output = 3


[tool.pylint.MASTER]
extension-pkg-whitelist = "PyQt6, PySide6, pydantic"
load-plugins = "pylint_protobuf"

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint]
ignore-paths = ['test', 'src/controller/autotrack', 'src/proto/']
generated-members = ['proto/']
source-roots = ["src"]

[tool.mypy]
mypy_path = ["src"]
generated-members = ['proto/']

